--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-draggable": "^4.4.5",
+    "react-router-dom": "^6.3.0"
   }
 }
