--- a/package.json
+++ b/package.json
@@ -1,8 +1,27 @@
 {
   "name": "swiss-button",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "Ingher",
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "button",
+    "multi-button"
+  ],
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jawblia/npm-test.git"
+  },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +32,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && mkdir dist && babel src/components/MainButton/ -d dist --copy-files",
+    "react_build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +56,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.3.0"
   }
