--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiss-button",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "author": "Ingher",
   "keywords": [
@@ -18,10 +18,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jawblia/npm-test.git"
+    "url": "git+https://github.com/erasherra/SwissButton"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@emotion/react": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
