fixed the structure

--- a/babel.config.json
+++ b/babel.config.json
@@ -12,7 +12,13 @@
       "useBuiltIns": "usage",
       "corejs": "3.6.5"
        }
-   ],
-      "@babel/preset-react"
+      ],
+      ["@babel/preset-react",
+       {
+         "runtime": "automatic",
+         "importSource": "react"
+       }
+      ]
+      
    ]
    }
