--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiss-button",
-  "version": "0.1.1",
+  "version": "0.1.7",
   "private": false,
   "author": "Ingher",
   "keywords": [
@@ -29,6 +29,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "swiss-button": "^0.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
